# geoff

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INITIAL_PLAN.md  LICENSE  NOTICE  README.md  deny.toml  geoff.toml.example
.claude/agents/: architect.md  compliance.md  deno-engineer.md  designer.md  devops.md  frontend-engineer.md  legal.md  ontologist.md  qa-engineer.md  rust-engineer.md  team-lead.md
.github/workflows/: ci.yml  release.yml
components/: geoff-search.js
components/geoff-editor/: geoff-editor.js
components/geoff-graph-view/: geoff-graph-view.js
components/geoff-shacl-panel/: geoff-shacl-panel.js
components/geoff-vocab-picker/: geoff-vocab-picker.js
crates/geoff-cli/: Cargo.toml
crates/geoff-cli/src/: main.rs
crates/geoff-cli/tests/: integration_build.rs
crates/geoff-content/: Cargo.toml
crates/geoff-content/src/: frontmatter.rs  lib.rs  markdown.rs  scanner.rs
crates/geoff-core/: Cargo.toml
crates/geoff-core/src/: cache.rs  config.rs  error.rs  lib.rs  types.rs
crates/geoff-deno/: Cargo.toml
crates/geoff-deno/src/: bridge.rs  lib.rs  plugin.rs  protocol.rs
crates/geoff-graph/: Cargo.toml
crates/geoff-graph/src/: store.rs
crates/geoff-ontology/: Cargo.toml
crates/geoff-ontology/src/: fuzzy.rs  lib.rs  mappings.rs  resolver.rs  validation.rs  vocabulary.rs
crates/geoff-plugin/: Cargo.toml
crates/geoff-plugin/src/: context.rs  lib.rs  loader.rs  registry.rs  traits.rs
crates/geoff-render/: Cargo.toml
crates/geoff-render/src/: jsonld.rs  lib.rs  pipeline.rs  renderer.rs
crates/geoff-server/: Cargo.toml
crates/geoff-server/src/: api.rs  lib.rs  server.rs  ui.rs  watcher.rs
npm/: README.md  install.js  package.json  run.js
ontologies/: dublin-core.ttl  foaf.ttl  geoff.ttl  schema-org.ttl  sioc.ttl
ontology/: mappings.toml
ontology/shapes/: article.ttl  blog-post.ttl  page.ttl
plugins/: feed.ts  sitemap.ts
plugins/geoff-reading-time/: Cargo.toml
plugins/geoff-reading-time/src/: lib.rs
plugins/sdk/: jsonrpc.ts  mod.ts  types.ts
shapes/: blog-content.shacl.ttl
starters/blog/: geoff.toml
starters/blog/content/: about.md
starters/blog/content/blog/: welcome.md
starters/blog/ontology/: mappings.toml
starters/blog/templates/: base.html  blog-index.html  blog-page.html
starters/docs/: geoff.toml
starters/docs/content/docs/: configuration.md  getting-started.md
starters/docs/ontology/: mappings.toml
starters/docs/templates/: base.html  doc-page.html  doc-sidebar.html
starters/portfolio/: geoff.toml
starters/portfolio/content/: about.md
starters/portfolio/content/projects/: project-1.md
starters/portfolio/ontology/: mappings.toml
starters/portfolio/templates/: base.html  page.html  project-grid.html  project-page.html
team/: README.md
team/team-lead/: SKILL.md
tests/fixtures/simple-site/: geoff.toml
tests/fixtures/simple-site/.geoff/: build-cache.json
tests/fixtures/simple-site/content/: about.md  index.md
tests/fixtures/simple-site/content/blog/: first-post.md  second-post.md
tests/fixtures/simple-site/templates/: base.html  blog-page.html  page.html
tests/fixtures/validation-site/: geoff.toml
tests/fixtures/validation-site/content/blog/: invalid-post.md  post-with-sidecar.md  post-with-sidecar.ttl  valid-post.md
