[workspace]
members = [
    "crates/geoff-core",
    "crates/geoff-graph",
    "crates/geoff-content",
    "crates/geoff-render",
    "crates/geoff-server",
    "crates/geoff-cli",
    "crates/geoff-ontology",
    "crates/geoff-plugin",
    "crates/geoff-deno",
    "plugins/geoff-reading-time",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/chapeaux/geoff"
homepage = "https://github.com/chapeaux/geoff"

[profile.release]
lto = true
codegen-units = 1
strip = true
