[package]
name = "chapeaux-geoff"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Semantically rich static site generator built on W3C web standards"
keywords = ["static-site-generator", "rdf", "sparql", "semantic-web", "jamstack"]
categories = ["web-programming", "template-engine", "command-line-utilities"]

[[bin]]
name = "geoff"
path = "src/main.rs"

[dependencies]
geoff-core = { path = "../geoff-core" }
geoff-graph = { path = "../geoff-graph" }
geoff-content = { path = "../geoff-content" }
geoff-render = { path = "../geoff-render" }
geoff-server = { path = "../geoff-server" }
geoff-ontology = { path = "../geoff-ontology" }
geoff-plugin = { path = "../geoff-plugin" }
geoff-deno = { path = "../geoff-deno" }
clap = { version = "4", features = ["derive"] }
colored = "3"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde_json = "1"
camino = "1"

[dev-dependencies]
tempfile = "3"
