[package]
name = "chapeaux-geoff"
version = "0.2.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Semantically rich static site generator built on W3C web standards"
keywords = ["static-site", "rdf", "sparql", "semantic-web", "jamstack"]
categories = ["web-programming", "template-engine", "command-line-utilities"]

[[bin]]
name = "geoff"
path = "src/main.rs"

[dependencies]
geoff-core = { version = "0.2.5", path = "../geoff-core" }
geoff-graph = { version = "0.2.5", path = "../geoff-graph" }
geoff-content = { version = "0.2.5", path = "../geoff-content" }
geoff-render = { version = "0.2.5", path = "../geoff-render" }
geoff-server = { version = "0.2.5", path = "../geoff-server" }
geoff-ontology = { version = "0.2.5", path = "../geoff-ontology" }
geoff-plugin = { version = "0.2.5", path = "../geoff-plugin" }
geoff-deno = { version = "0.2.5", path = "../geoff-deno" }
clap = { version = "4", features = ["derive"] }
colored = "3"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
serde_json = "1"
camino = "1"

[dev-dependencies]
tempfile = "3"
