[package]
name = "geoff-content"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Markdown parsing, TOML frontmatter extraction, and triple generation for Geoff"
keywords = ["markdown", "frontmatter", "rdf", "parsing"]
categories = ["parsing", "text-processing"]

[dependencies]
geoff-core = { version = "0.1.0", path = "../geoff-core" }
geoff-graph = { version = "0.1.0", path = "../geoff-graph" }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
camino = "1"

[dev-dependencies]
tempfile = "3"
