[package]
name = "geoff-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types, config, and error handling for Geoff static site generator"
keywords = ["static-site", "rdf", "semantic-web"]
categories = ["web-programming"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
camino = { version = "1", features = ["serde1"] }

[dev-dependencies]
tempfile = "3"
