[package]
name = "geoff-deno"
version = "0.2.3"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Deno subprocess bridge for Geoff plugins via JSON-RPC over stdin/stdout"
keywords = ["deno", "plugin", "json-rpc", "subprocess"]
categories = ["development-tools"]

[dependencies]
geoff-core = { version = "0.2.3", path = "../geoff-core" }
geoff-graph = { version = "0.2.3", path = "../geoff-graph" }
geoff-plugin = { version = "0.2.3", path = "../geoff-plugin" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "sync"] }
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
