[package]
name = "geoff-graph"
version = "0.2.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Oxigraph RDF store wrapper with named graph support for Geoff"
keywords = ["rdf", "sparql", "oxigraph", "graph-database"]
categories = ["database"]

[dependencies]
geoff-core = { version = "0.2.5", path = "../geoff-core" }
oxigraph = "0.5"
serde_json = "1"
camino = "1"

[dev-dependencies]
tempfile = "3"
