[package]
name = "geoff-ontology"
version = "0.2.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Vocabulary loading, fuzzy matching, and mapping resolution for Geoff"
keywords = ["ontology", "rdf", "semantic-web", "vocabulary"]
categories = ["data-structures"]

[dependencies]
geoff-core = { version = "0.2.2", path = "../geoff-core" }
geoff-graph = { version = "0.2.2", path = "../geoff-graph" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
strsim = "0.11"
camino = "1"
rudof_lib = "0.2"

[dev-dependencies]
tempfile = "3"
