[package]
name = "geoff-plugin"
version = "0.2.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Plugin trait, lifecycle hooks, and registry for Geoff"
keywords = ["plugin", "extensibility", "hooks"]
categories = ["development-tools"]

[dependencies]
geoff-core = { version = "0.2.2", path = "../geoff-core" }
geoff-graph = { version = "0.2.2", path = "../geoff-graph" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libloading = "0.8"
camino = "1"
toml = "0.8"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tempfile = "3"
