[package]
name = "geoff-render"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Tera template rendering and JSON-LD output for Geoff"
keywords = ["template", "rendering", "json-ld", "tera"]
categories = ["template-engine"]

[dependencies]
geoff-core = { version = "0.2.1", path = "../geoff-core" }
geoff-graph = { version = "0.2.1", path = "../geoff-graph" }
geoff-content = { version = "0.2.1", path = "../geoff-content" }
geoff-ontology = { version = "0.2.1", path = "../geoff-ontology" }
tera = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
camino = "1"
rayon = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
