[package]
name = "geoff-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Axum dev server with hot reload for Geoff"
keywords = ["server", "dev-server", "hot-reload", "axum"]
categories = ["web-programming::http-server"]

[dependencies]
geoff-core = { path = "../geoff-core" }
geoff-graph = { path = "../geoff-graph" }
geoff-content = { path = "../geoff-content" }
geoff-render = { path = "../geoff-render" }
geoff-ontology = { path = "../geoff-ontology" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
camino = "1"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
