[package]
name = "geoff-server"
version = "0.2.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Axum dev server with hot reload for Geoff"
keywords = ["server", "dev-server", "hot-reload", "axum"]
categories = ["web-programming::http-server"]

[dependencies]
geoff-core = { version = "0.2.2", path = "../geoff-core" }
geoff-graph = { version = "0.2.2", path = "../geoff-graph" }
geoff-content = { version = "0.2.2", path = "../geoff-content" }
geoff-render = { version = "0.2.2", path = "../geoff-render" }
geoff-ontology = { version = "0.2.2", path = "../geoff-ontology" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
camino = "1"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
